--- a/考试.md
+++ b/考试.md
@@ -1,12 +1,12 @@
 ## 笔试题
-1. js的的两种引入方式是什么
+1. js的的两种引入方式是什么 
 2. 什么是变量 写出一种定义变量的方式 
 3. js中的数据类型都有哪些 
-4. 布尔(Boolean)类型的两个值分别是什么
+4. 布尔(Boolean)类型的两个值分别是什么 true false turn
 5. 以下代码,a输出的值是多好
 ```js
  var  a 
- console.log(a)
+ console.log(a) 
 ``` 
 6. 以下代码，str1的值是多少
 ```js
