--- a/作业/作业.md
+++ b/作业/作业.md
@@ -1,3 +1,10 @@
 1. * 写一个函数，获取考试的分数,如果成绩是在90(含)分以上的,则显示级别:A * 如果成绩是大于等于80的则:B * 如果成绩是大于等于70的则:C * 如果成绩是大于等于60的则:D * 如果成绩是小于60的则:E （明天上课之前）
 2. https://movie.douban.com/  豆瓣电影首页布局(周日晚上交) 
 3. 抄写数据类型(5遍)
+10月30号作业
+- 数组和数组的15种方法 理解和案例抄10遍 
+- [30,29,27.5,80,43] 求数组的平均值
+- [30,29,27.5,80,43] 求数组的最大值
+- [30,29,27.5,80,43] 求数组的最小值
+
+ 
