数据类型的判断

--- a/作业/作业.md
+++ b/作业/作业.md
@@ -6,5 +6,7 @@
 - [30,29,27.5,80,43] 求数组的平均值
 - [30,29,27.5,80,43] 求数组的最大值
 - [30,29,27.5,80,43] 求数组的最小值
-
+- 写一个函数来判断数据类型 typeof
+周一之前交   
+网站布局 http://www.beibaotu.com/ 背包兔子全站  11月14号早上交  
  
